# vRt

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  README.md  regexp-prefix.txt
include/: glm  tinygltf
include/tinygltf/: tiny_gltf.h
include/tinyrender/: tinyvk.h
include/vRt/: vRt-core.hpp  vRt-core.inl  vRt.cpp  vRt.h  vRt.hpp  vRt_impl.inl  vRt_internal.hpp  vRt_lib.cpp  vRt_subimpl.inl
include/vRt/Backland/: vRt_impl.inl  vRt_subimpl.inl
include/vRt/Implementation/: HardClasses.inl
include/vRt/Parts/: API.inl  Enums.inl  Handlers.inl  HandlersDef.inl  HardClasses.inl  HardClassesDef.inl  Headers.inl  Initializers.inl  Structures.inl  StructuresDef.inl  StructuresLow.inl  Vulkan.inl
include/vRt/Utilities/: HardCode.hpp  VkUtils.hpp
include/vRt/implementation/: dispatcher.inl  hlbvh2.inl  radix.inl  utils.hpp  utils.inl
include/vRt/utils/: utils.hpp
include/vRt/vRtX/: RTXAcceleratorExtension.cpp  RTXAcceleratorExtension.hpp  RTXClasses.inl  RTXClassesDef.inl  RTXExtendedAPI.inl  RTXHandlers.inl  RTXHandlersDef.inl  RTXImplemented.inl
include/vRt/vRtX-NVX/: RTXAcceleratorExtension.hpp  RTXAcceleratorExtensionNVX.cpp  RTXExtendedAPI.inl  RTXHandlersDef.inl
include/vRtX-NVX/: RTXAcceleratorExtension.hpp  RTXHandlers.inl
include/vRtX-NVX/Implementation/: RTXAcceleratorSet.inl  RTXExtendedImpl.inl
include/vulkan/: vk_mem_alloc.h  volk.c  volk.h  vulkan.hpp
lib/: glfw3.lib
prebuilt/: readme.txt
prebuilt/batch/: RunBoomBox.cmd  RunDemo.cmd  RunHelmet.cmd  RunPlane.cmd  RunSponza.cmd  RunTangentTest.cmd  this_is_examples.txt
prebuilt/unused/first-pass/: first-gen.frag
prebuilt/unused/outdated/: dull.comp  fragments.txt  gltfBasic.cpp  helloTriangle.cpp  vtransformed.comp
screenshots/: readme.txt
shaders-next/: TODO.txt  build-for-intel.cmd  build-for-intel.ps1  build-for-nvidia.cmd  build-for-nvidia.ps1  build-for-universal.cmd  build-for-universal.ps1  build-for-vega.cmd  build-for-vega.ps1  shaders-list.cmd  shaders-list.ps1  tips.txt
shaders-next/hlBVH2/: bound-calc.comp  bvh-build-indev.comp  bvh-build-td.comp  bvh-build.comp  bvh-fit-nonv.comp  bvh-fit-unable.comp  bvh-fit.comp  interpolator.comp  leaf-gen.comp  leaf-link.comp  shorthand.comp  traverse-bvh.comp
shaders-next/hlBVH2/submodules/: bvh-build-general.glsl  includes.glsl  traverse-bvh2.glsl
shaders-next/hlBVH2/triangle/: bound-calc.comp  box-calc.comp  leaf-gen.comp
shaders-next/hlBVH2Top/: planned.txt
shaders-next/hlBVH2_/: shorthand.comp
shaders-next/hlbvh2/: bound-calc.comp  bvh-build.comp  bvh-fit.comp  includes.glsl  leaf-gen.comp  leaf-link.comp  shorthand.comp
shaders-next/hlbvh2/submodules/: includes.glsl  traverse-bvh2.glsl
shaders-next/include/: ballotlib.glsl  driver.glsl  hit-lib.glsl  hitlib.glsl  mathlib.glsl  morton.glsl  morton32x.glsl  morton64x.glsl  random.glsl  rayslib.glsl  structs.glsl  vertex-input.glsl  vertex.glsl
shaders-next/mRadix/: planned.txt
shaders-next/native/: dull.comp  triplet.comp  vinput.comp
shaders-next/octRadix/: planned.txt
shaders-next/old_cmd/: shaders-list.cmd
shaders-next/oldcmd/: build-for-nvidia.cmd
shaders-next/output/: render.frag
shaders-next/qRadix/: histogram.comp  includes.glsl  permute.comp  pfx-work.comp
shaders-next/radix/: copyhack.comp  histogram.comp  includes.glsl  permute.comp  pfx-work.comp  plans.txt
shaders-next/radix-2/: copyhack.comp  histogram.comp  includes.glsl  permute.comp  pfx-work.comp  plans.txt  transpose.comp
shaders-next/ray-tracing/: closest-hit-shader.comp  generation-shader.comp  group-shader.comp  htgen-shader.comp  htgrp-shader.comp  miss-hit-shader.comp  rfgen-shader.comp
shaders-next/raytracing/: closest-hit-shader.comp  generation-shader.comp  group-shader.comp  miss-hit-shader.comp  resolve-shader.comp  vertex-shader.comp
shaders-next/raytracing/submodules/: environment.glsl  traverse-bvh2.glsl
shaders-next/tRadix/: planned.txt
shaders-next/utils/: icopy.comp  vinput.comp
shaders-next/utils/copy-program/: bcopy.comp  icopy.comp
shaders-next/vertex/: vinput-v2.comp  vinput.comp  vtransformed.comp
shaders-sdk/: build-for-amd.ps1  build-for-intel.ps1  build-for-intel8.ps1  build-for-nvidia.ps1  build-for-radv.ps1  build-for-turing.ps1  build-for-universal.ps1  build-for-vega.ps1  radix  shaders-list.ps1  tips.txt  turing.conf
shaders-sdk/LegacyGPU/: build-for-amd.ps1
shaders-sdk/accelNVX/: .gitkeep  traverse.rahit  traverse.rchit  traverse.rgen  traverse.rmiss
shaders-sdk/hlBVH2/: bound-calc.comp  bvh-build-td.comp  bvh-fit.comp  interpolator.comp  leaf-link.comp  shorthand.comp  traverse-bvh-task.comp  traverse-bvh-top.comp  traverse-bvh.comp
shaders-sdk/include/: attribute.glsl  ballotlib.glsl  driver.glsl  hitlib.glsl  mathlib.glsl  morton32x.glsl  morton64x.glsl  random.glsl  rayslib.glsl  structs.glsl  vertex-input.glsl  vertex.glsl
shaders-sdk/native/: vinput.comp
shaders-sdk/output/: render.frag  render.vert
shaders-sdk/radix/: copyhack.comp  histogram.comp  includes.glsl  permute.comp  pfx-work.comp
shaders-sdk/radix-1/: histogram.comp  includes.glsl  permute.comp  pfx-work.comp  plans.txt
shaders-sdk/radix-4/: histogram.comp  includes.glsl  permute.comp  pfx-work.comp
shaders-sdk/radix-rtx/: histogram.comp  includes.glsl  permute.comp  pfx-work.comp
shaders-sdk/ray-tracing/: closest-hit-shader.comp  generation-shader.comp  group-shader.comp  miss-hit-shader.comp  rfgen-shader.comp
shaders-sdk/raytracing/: closest-hit-shader.comp  generation-shader.comp  group-shader.comp  miss-hit-shader.comp  rfgen-shader.comp
shaders-sdk/upcoming/: build-for-amd.ps1  build-for-turing.ps1
shaders-sdk/vertex/: vattributes.comp  vtransformed.comp
src/base/: appBase.hpp  appRenderer.hpp  appStructures.hpp  appUtils.hpp  gapi.hpp  utils.hpp
src/examples/: gltfBasic.cpp  gltfPBR.cpp  gltfPBR.inl  helloTriangle.cpp  main.cpp  renderer.inl
testscene/: RunBoomBox.cmd  RunPlane.cmd  RunTangentTest.cmd  intrusive  shaders
(+424 files in other folders)
